@@ -2,7 +2,7 @@
 /*****************************************************************************
  * FIDOGATE --- Gateway UNIX Mail/News <-> FTN NetMail/EchoMail
  *
- * $Id: confval.c,v 1.1 2003/11/05 00:57:34 rusfidogate Exp $
+ * $Id: confval.c,v 1.2 2004/06/07 19:58:18 rusfidogate Exp $
  *
  * Active group
  *
@@ -33,7 +33,7 @@
 #include "getopt.h"
 
 #define PROGRAM 	"confval"
-#define VERSION 	"$Revision: 1.1 $"
+#define VERSION 	"$Revision: 1.2 $"
 #define CONFIG		DEFAULT_CONFIG_MAIN
 
 
@@ -99,13 +99,13 @@ int main(int argc, char **argv)
     for(pFirst = config_first(); pFirst; pFirst = pFirst->next)
     {
 	if(argc == 1)
-	    fprintf(stderr, "fidogate_%s=\"%s\"\n", pFirst->key, pFirst->string);
+	    fprintf(stdout, "fidogate_%s=\"%s\"\n", pFirst->key, pFirst->string);
 	else if( p_flag )
 	{
 	    if(!stricmp(p_flag, pFirst->key))
 	    {
 		IsExist = 1;
-		fprintf(stderr, "fidogate_%s=\"%s\"\n", p_flag, pFirst->string);
+		fprintf(stdout, "%s\n", pFirst->string);
 	    }
 	}
     }
